--- a/week7/map/mapexample.html
+++ b/week7/map/mapexample.html
@@ -11,7 +11,7 @@
             }
         </style>
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9ruCIgrZzGv0hka1tXLOZUIVMaXeNZUE&callback=initMap" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=YOUR API KEY&callback=initMap" async defer></script>
         <script type="text/javascript">
         function initMap() {	
             var map = new google.maps.Map(document.getElementById('map'), {
